Casi Versión final

--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 			    <div class="nav-wrapper">
 			      <a href="index.html" class="brand-logo">Grupo Rinsa</a>
 			      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-			      <ul class="right hide-on-med-and-down">
-							<li><a href="index2.html#nosotros">NOSOTROS</a></li>
-			        <li><a href="#cuadro4" onclick="Hola()">SERVICIOS</a></li>
-			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
-			        <li><a href="index2.html#equipo">EQUIPO</a></li>
+						<ul class="right hide-on-med-and-down">
+			        <li><a href="index2.html">NOSOTROS</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro4">SERVICIOS</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro5">MUNDO MEJOR</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro9">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
+							<li><a class="waves-effect waves-light btn pulse">Simple</a></li>
 			      </ul>
 			      <ul class="side-nav" id="mobile-demo">
-							<li><a href="index2.html#nosotros">NOSOTROS</a></li>
-			        <li><a href="#cuadro4">SERVICIOS</a></li>
-			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
-			        <li><a href="index2.html#equipo">EQUIPO</a></li>
+							<li><a href="index2.html">NOSOTROS</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro4">SERVICIOS</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro5">MUNDO MEJOR</a></li>
+			        <li><a class="llamadaCuadros" href="#cuadro9">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
+							<li><a class="waves-effect waves-light btn pulse">Simple</a></li>
 			      </ul>
 			    </div>
 			  </nav>
@@ -53,36 +55,42 @@
 
 							<div class="row programas">
 								<div class="col s12 m6 imagenPrograma">
-									<img src="img/paris.jpg" alt="">
+									<img src="img/Rinsa_ Liderman_ Banner Web.jpeg" alt="">
 								</div>
 								<div class="col s12 m6 itemPrograma">
 									<p><span class="tituloItemPrograma">Programa de Liderazgo y Desarrollo Personal: Somos Más</span></p>
 									<div class="col s6 m12 valign-wrapper">
-										<a target="_blank" href="#"><i class="material-icons">add_box</i></a><p>Conoce más</p>
+										<a target="_blank" href="https://docs.zoho.com/file/4137j055a878a85b341f6adddde3534fb12bf"><i class="material-icons">add_box</i></a><p>Conoce más <a target="_blank" href="https://docs.zoho.com/file/4137j055a878a85b341f6adddde3534fb12bf">aquí</a></p>
 									</div>
 									<div class="col s6 m12 valign-wrapper">
-										<a target="_blank" href="#"><i class="material-icons">add_location</i></a><p>100% virtual</p>
+										<i class="material-icons">add_location</i><p>100% virtual</p>
 									</div>
 									<div class="col s6 m12 valign-wrapper">
-										<a target="_blank" href="#"><i class="material-icons">date_range</i></a><p>Iniciamos el <span>18 de noviembre</span></p>
+										<i class="material-icons">date_range</i><p><span>18 De noviembre</span></p>
+									</div>
+									<div class="col s6 m12 valign-wrapper">
+										<a target="_blank" href="#"><i class="material-icons">assistant_photo</i></a><p>Inscribete <a target="_blank" href="#">aquí</a></p>
 									</div>
 								</div>
 							</div>
 
 							<div class="row programas">
 								<div class="col s12 m6 imagenPrograma">
-									<img src="img/paris.jpg" alt="">
+									<img src="img/LiderazgoEst_ Banner Web.jpeg" alt="">
 								</div>
 								<div class="col s12 m6 itemPrograma">
 									<p><span class="tituloItemPrograma">Programa de Alta Especialización en Liderazgo Estratégico</span></p>
 									<div class="col s6 m12 valign-wrapper">
-										<a target="_blank" href="#"><i class="material-icons">add_box</i></a><p>Conoce más</p>
+										<a target="_blank" href="https://docs.zoho.com/file/4137j4d49262047124bb0abf412bf76945a7d"><i class="material-icons">add_box</i></a><p>Conoce más <a target="_blank" href="https://docs.zoho.com/file/4137j4d49262047124bb0abf412bf76945a7d">aquí</a></p>
 									</div>
 									<div class="col s6 m12 valign-wrapper">
 										<a target="_blank" href="#"><i class="material-icons">add_location</i></a><p>100% virtual</p>
 									</div>
 									<div class="col s6 m12 valign-wrapper">
 										<a target="_blank" href="#"><i class="material-icons">date_range</i></a><p>Iniciamos el <span>18 de noviembre</span></p>
+									</div>
+									<div class="col s6 m12 valign-wrapper">
+										<a target="_blank" href="#"><i class="material-icons">assistant_photo</i></a><p>Inscribete <a target="_blank" href="#">aquí</a></p>
 									</div>
 								</div>
 							</div>
@@ -134,18 +142,21 @@
 								En ese marco, el Grupo Rinsa ha adquirido el 100% de las acciones de Santo Tomás Moro Business School y la ha transformado en <span>Pachacamac Executive Education</span> que ofrece los siguientes programas:</p>
 								<div class="row programas">
 									<div class="col s12 m6 imagenPrograma">
-										<img src="img/paris.jpg" alt="">
+										<img src="img/Booklet_ Banner Web.jpeg" alt="">
 									</div>
 									<div class="col s12 m6 itemPrograma">
 										<p><span class="tituloItemPrograma">Programa de Alta Especialización en Innovación Estratégica</span></p>
 										<div class="col s6 m12 valign-wrapper">
-											<a target="_blank" href="#"><i class="material-icons">add_box</i></a><p>Conoce más</p>
+											<a target="_blank" href="https://docs.zoho.com/file/4137ja3eabfed998d4ca2abfbf8b8ea8ca316"><i class="material-icons">add_box</i></a><p>Conoce más <a target="_blank" href="https://docs.zoho.com/file/4137ja3eabfed998d4ca2abfbf8b8ea8ca316">aquí</a></p>
 										</div>
 										<div class="col s6 m12 valign-wrapper">
 											<a target="_blank" href="#"><i class="material-icons">add_location</i></a><p>100% virtual</p>
 										</div>
 										<div class="col s6 m12 valign-wrapper">
 											<a target="_blank" href="#"><i class="material-icons">date_range</i></a><p>Iniciamos el <span>16 de diciembre</span></p>
+										</div>
+										<div class="col s6 m12 valign-wrapper">
+											<a target="_blank" href="#"><i class="material-icons">assistant_photo</i></a><p>Inscribete <a target="_blank" href="#">aquí</a></p>
 										</div>
 									</div>
 								</div>
@@ -336,15 +347,18 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		<script type="text/javascript">
-		$(function(){
-			function Hola(){
-				alert("Hola");
-			}
-		});
-		
+
 		$(document).ready(function(){
 
 	    $(".button-collapse").sideNav();
+
+			$(".llamadaCuadros").click(function () {
+				var cuadroEspecifico = $(this).attr('href');
+				$('html,body').animate({
+        scrollTop: $(cuadroEspecifico).offset().top
+			}, 1000);
+				$(cuadroEspecifico + ">.activator").trigger('click');
+			});
 
 			var ancho_pantalla= $(window).width();
 			$(".activator").click(function (){
@@ -471,7 +485,7 @@
 				} else if (ancho_pantalla>978) {
 					var cuadroActivo = $(this).parent().attr("id");
 					if (cuadroActivo=="cuadro1") {
-						$(".tarjetas").css("height","1500px");
+						$(".tarjetas").css("height","1230px");
 						$("#cuadro1").css({"width":"32%","height":"400px"});
 						$("#cuadro2").css({"top":"0","left":"33.34%"});
 						$("#cuadro3").css({"top":"0","left":"66.68%"});
@@ -482,7 +496,7 @@
 						$("#cuadro8").css({"top":"820px","left":"33.34%"});
 						$("#cuadro9").css({"top":"820px","left":"66.68%"});
 					} else {
-						$(".tarjetas").css("height","1500px");
+						$(".tarjetas").css("height","1230px");
 						$("#cuadro1").css({"width":"32%","height":"400px"});
 						$("#cuadro2").css({"width":"32%","height":"400px"});
 						$("#cuadro3").css({"width":"32%","height":"400px"});
