--- a/index2.html
+++ b/index2.html
@@ -18,51 +18,25 @@
 			      <a href="index.html" class="brand-logo">Grupo Rinsa</a>
 			      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			      <ul class="right hide-on-med-and-down">
-			        <li><a href="index2.html#nosotros">NOSOTROS</a></li>
-			        <li><a href="index2.html#servicios">SERVICIOS</a></li>
-			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
-			        <li><a href="index2.html#equipo">EQUIPO</a></li>
+			        <li><a href="index2.html">NOSOTROS</a></li>
+			        <li><a href="#">SERVICIOS</a></li>
+			        <li><a href="#">MUNDO MEJOR</a></li>
+			        <li><a href="#">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
+							<li><a class="waves-effect waves-light btn pulse">Simple</a></li>
 			      </ul>
 			      <ul class="side-nav" id="mobile-demo">
-							<li><a href="index2.html#nosotros">NOSOTROS</a></li>
-			        <li><a href="index2.html#servicios">SERVICIOS</a></li>
-			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
-			        <li><a href="index2.html#equipo">EQUIPO</a></li>
+							<li><a href="index2.html">NOSOTROS</a></li>
+			        <li><a href="#">SERVICIOS</a></li>
+			        <li><a href="#">MUNDO MEJOR</a></li>
+			        <li><a href="#">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
+							<li><a class="waves-effect waves-light btn pulse">Simple</a></li>
 			      </ul>
 			    </div>
 			  </nav>
 		</header>
 		<main>
-
-			<!-- <div id="nosotros">
-				<div class="row">
-					<span class="textoSubtitulos">Nuestro propósito</span>
-				</div>
-				<div class="row citasFounder">
-					<div class="col s12">
-						<p class="citas"><span class="comillas">"</span>Creemos que la mejor definición <br>de lo que somos es lo que hacemos, <br> por eso somos más porque hacemos más<span class="comillas">"</span></p>
-					</div>
-				</div>
-				<div class="row autores">
-					<div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
-						<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/22228327_10214359075875313_8997328943544160094_n.jpg?oh=d35a850052c4e6beba94f05bb1dfe537&oe=5A4278AA" alt="" class="founders">
-						<p>Arnold J. Reyes Cabrera<br><span>CEO & Founder de Rinsa</span></p>
-					</div>
-				</div>
-				<div class="row citasFounder">
-					<div class="col s12">
-						<p class="citas">"Creamos un espacio donde todos podemos soñar y crear un mundo mejor para todos."</p>
-					</div>
-				</div>
-				<div class="row autores">
-					<div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
-						<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/16427622_10206263139897426_4808952493104503828_n.jpg?oh=bf298226c9a573742b9805d8a7541d74&oe=5A8462EB" alt="" class="founders">
-						<p>Jose Navarrete Del Rosario<br><span>CBO & Founder de Rinsa</span></p>
-					</div>
-				</div>
-			</div> -->
 
 				<div id="nosotros">
 
@@ -97,25 +71,29 @@
 				<div id="VyM">
 					<div class="row">
 						<div class="col s12 m4 visionymision">
-							<p class="flow-text"><span class="textoSubtitulos">Visión 2021_</span><br>
+							<p class="flow-text"><span class="textoSubtitulos">Visión 2021_</span></p>
+							<div class="divider"></div>
+							<p class="flow-text">
+								<br>
 							Somos el grupo economico más diverso, rentable, sostenible y feliz de América Latina.</p>
 						</div>
 						<div class="col s12 m4 visionymision right">
-							<p class="flow-text"><span class="textoSubtitulos">Misión 2017_</span><br>
+							<p class="flow-text"><span class="textoSubtitulos">Misión 2017_</span></p>
+							<div class="divider"></div>
+								<p class="flow-text"><br>
 								Somos el mejor equipo del mundo haciendo lo mejor para el mundo.</p>
 						</div>
 					</div>
-					<!-- <div class="row franja">
-					</div> -->
 				</div>
 
 				<div id="principios">
 					<div class="row">
 						<div class="col s12 inicioSeccion">
 							<p><span class="textoSubtitulos">Nuestros Principios</span></p>
+							<div class="divider"></div>
 						</div>
 						<div class="col s12 m6 l3 principios">
-							<img src="img/principioDiversion.jpeg" alt="">
+							<img src="img/Prinicipio_ Diversion.jpg" alt="">
 							<p><span class="tituloPrincipio">Principio de <br>Diversión Total_</span><br><br>Si no es divertido no es Rinsa. <br>En Rinsa está prohibido el trabajo. Todo lo que hacemos por pasión; por lo mismo, nadie está obligado a hacer lo que no le gusta.</p>
 						</div>
 						<div class="col s12 m6 l3 principios">
@@ -123,7 +101,7 @@
 							<p><span class="tituloPrincipio">Principio <br>Más es Más_</span><br><br>En Rinsa #SomosMás porque #HacemosMás estamos orientados a superar las expectativas siempre y en todo lugar dentro de un amplio marco de responsabilidad social ambiental.</p>
 						</div>
 						<div class="col s12 m6 l3 principios">
-							<img src="img/principioFuturo.jpeg" alt="">
+							<img src="img/Principio_ Futuro Activo.png" alt="">
 							<p><span class="tituloPrincipio">Principio del <br>Futuro Activo_</span><br><br>En Rinsa nos sentimos orgullosos de nuestro equipo y de nuestros clientes; por ello, una vez Rinsa, siempre Rinsa.</p>
 						</div>
 						<div class="col s12 m6 l3 principios">
@@ -137,17 +115,18 @@
 					<div class="row">
 						<div class="col s12 inicioSeccion">
 							<p><span class="textoSubtitulos">Valores Corporativos</span></p>
+							<div class="divider"></div>
 						</div>
 						<div class="col s12 m4 valores">
 							<img src="img/valorPasion.jpeg" alt="">
 							<p><span>Pasión y <br>Optimismo_</span> <br><br>Creemos que los miembros de nuestros equipos deben apasionados por la tarea que desarrollan y la actitud positiva con la que se predisponen a resolver problemas.</p>
 						</div>
 						<div class="col s12 m4 valores">
-							<img src="img/valorTransparencia.jpeg" alt="">
+							<img src="img/Valor_ Transparencia.jpg" alt="">
 							<p><span>Transparencia y <br>Respeto_</span><br><br>Creemos en la transparencia estratégica, financiera y de las comunicaciones de la empresa así como en la necesidad de practicar ilimitado respeto por los demás.</p>
 						</div>
 						<div class="col s12 m4 valores">
-							<img src="img/valorEquipo.jpeg" alt="">
+							<img src="img/Valor_ TrabajoEnEquipo.png" alt="">
 							<p><span>Trabajo en <br>Equipo_</span><br><br>Creemos en equipos ágiles y simples que permitan desarrollen tareas con la máxima libertad, equidad y comunicación posible. En Rinsa no creemos en las jerarquías.</p>
 						</div>
 
@@ -158,6 +137,7 @@
 					<div class="row">
 						<div class="col s12 inicioSeccion">
 							<p><span class="textoSubtitulos">Nuestra Filosofía_</span></p>
+							<div class="divider"></div>
 						</div>
 						<div class="col s12 filosofia center">
 							<p><span>Simple_</span><br><br>
@@ -171,43 +151,20 @@
 					</div>
 				</div>
 
-				<!-- <div id="servicios">
-					<div class="row"><p><span class="textoSubtitulos">Nuestros Servicios_</span></p></div>
-					<div class="row servicios_Simple">
-						<p><span>Simple_</span><br><br>Por favor selecciona que tipo de cliente eres para poder ayudarte_</p>
-					</div>
-					<div class="row">
-						<div class="col s12 m4 servicios">
-							<div class="soyUna valign-wrapper"><p>Soy una <br>Persona</p></div>
-							<p>Recibimos solicitudes y atendemos clientes a partir de los 14 años. Si deseas adquirir un servicio nuestro entra <a href="#">aquí</a>.</p>
-						</div>
-						<div class="col s12 m4 servicios">
-							<div class="soyUna valign-wrapper"><p>Soy una<br>Corporación <br>Privada</p></div>
-							<p>Si tienes una empresa privada (o pública de derecho privado) con uno o más trabajadores debes ingresar <a href="#">aquí</a>.</p>
-						</div>
-						<div class="col s12 m4 servicios">
-							<div class="soyUna valign-wrapper"><p>Soy una<br>Corporación<br> Pública</p></div>
-							<p>Si representas a alguna institución pública o gobierno nuestros servicios están disponibles <a href="#">aquí</a>.</p>
-						</div>
-					</div>
-
-					<div class="row servicios_Importante">
-						<p><span>Importante_</span><br><br>Por favor, lea nuestra Política de Protección de Datos <a href="">aquí</a>.</p>
-					</div>
-				</div>
 
 
 				<div id="mundo">
 					<div id="compromisos">
 						<div class="row">
 							<p><span class="textoSubtitulos">Nuestros Compromisos</span></p>
+							<div class="divider"></div>
 						</div>
 						<div class="row textoCompromisos">
 							<p><span style="font-weight: bold;">Asumimos</span> un compromiso internacional con el United Nations Global Compact, con el UN Women, con los Principles for Responsable Management Education y los 17 Objetivos para el Desarrollo Sostenible.</p>
 						</div>
 						<div class="row">
 							<div class="col s12 m6 compromisos center">
-								<img src="img/unglobal.jpeg" alt="">
+								<img src="img/unglobal.png" alt="">
 								<div class="valign-wrapper">
 									<a target="_blank" href="https://www.unglobalcompact.org/"><i class="material-icons">add_box</i></a>
 									<p>Ver compromiso: <br>
@@ -215,7 +172,7 @@
 								</div>
 							</div>
 							<div class="col s12 m6 compromisos center">
-								<img src="img/prme.jpeg" alt="">
+								<img src="img/prme.gif" alt="">
 								<div class="valign-wrapper">
 									<a target="_blank" href="http://www.unprme.org/"><i class="material-icons">add_box</i></a>
 									<p>Ver compromiso: <br>
@@ -223,7 +180,7 @@
 								</div>
 							</div>
 							<div class="col s12 m6 compromisos center">
-								<img src="img/ods.jpeg" alt="">
+								<img src="img/ods.png" alt="">
 								<div class="valign-wrapper">
 									<a target="_blank" href="http://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/"><i class="material-icons">add_box</i></a>
 									<p>Ver compromiso: <br>
@@ -231,7 +188,7 @@
 								</div>
 							</div>
 							<div class="col s12 m6 compromisos center">
-								<img src="img/unwomen.jpeg" alt="">
+								<img src="img/unwomen.png" alt="">
 								<div class="valign-wrapper">
 									<a target="_blank" href="http://www.unwomen.org/es"><i class="material-icons">add_box</i></a>
 									<p>Ver compromiso: <br>
@@ -241,59 +198,8 @@
 						</div>
 					</div>
 
-					<div id="owis">
-						<div class="row textoCompromisos">
-							<p>Gestionamos nuestra Responsabilidad Social Ambiental mediante nuestro Programa Global de Voluntario <span style="font-weight: bold;">Rinsa Owi</span> una propuesta muy especial con beneficios exclusivos para todos.</p>
-						</div>
 
-						<div class="row">
-							<div class="col s12">
-								<p id="rinsaOwi">Rinsa Owi</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Programa Owi_</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Noticias</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Únete</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Líneas de Acción_</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Equipo_</p>
-							</div>
-							<div class="col s6 m4 valign-wrapper">
-								<a target="_blank" href="#"><i class="material-icons">add_box</i></a>
-								<p class="rsrinsa">Síguenos</p>
-							</div>
-						</div>
-
-						<div class="fotoOwi">
-							<h3>Tú eres el Owi que el mundo necesita. <br>Únete</h3>
-							<img id="FotoOwiJPG" src="img/super.jpeg" alt="">
-						</div>
-					</div>
 				</div>
-
-			<div id="equipo">
-				<img src="img/fondo3.jpg" alt="">
-				<div class="row">
-					<div class="col s12 m6 right">
-						<p><span class="nosotrosTitulo">¿Quieres ser parte de Rinsa?</span><br><br>Tú puedes ser parte de nuestro equipo en Ámerica Latina. <br><span style="font-weight:bold">¡Postula ya!</span></p>
-					</div>
-					<div class="col s12 iconoIr">
-						<a href="#"><i class="material-icons">chevron_right</i></a>
-					</div>
-				</div>
-			</div> -->
 
 		</main>
 
